--- a/README.Rmd
+++ b/README.Rmd
@@ -34,13 +34,9 @@ devtools::install_github("shaughnessyar/driftR")
 ## Background
 The `driftR` package implements a series of equations used in [Dr. Elizabeth Hasenmueller's](https://www.slu.edu/arts-and-sciences/earth-atmospheric-sciences/faculty/hasenmueller-elizabeth.php) hydrology and geochemistry research. These equations correct continuous water quality monitoring data for incremental drift that occurs over time after calibration. There are two forms of corrections included in the package - a one-point calibration and a two-point calibration. One-point and two-point calibration values are suited for different types of measurements.  The package is currently written for the easiest use with YSI multiparameter Sonde V2 series products. 
 
-The figure below illustrates the difference in `pH` values between the uncorrected data and the same data with the drift corrections implemented by `driftR` applied. Note that the uncorrected data drifts to higher values over time. `driftR` uses calibration data to correct this drift.
+The figure below illustrates the difference in chloride values between the uncorrected data and the same data with the drift corrections implemented by `driftR` applied. Note that the uncorrected data drifts to higher values over time. `driftR` uses calibration data to correct this drift.
 
-![](man/figures/pH_noDrop.png)
-
-The plot above also illustrates the importance of removing both initial and trailing observations in a given series of data. In this case, the initial observations are inaccurate due to equilibration of the instrument once it is placed back in the water after calibration. The last few observations are inaccurate due to the removal of the instrument from the water for data downloading and calibration. The figure below illustrates the effect of removing these observations on the data:
-
-![](man/figures/pH_Drop.png)
+![](man/figures/chloride_Drop.png)
 
 ## Usage
 As shown, continuous water quality instruments drift over time, so it becomes necessary to correct the data to maintain accuracy. `driftR` provides four verbs for applying these corrections in a consistent, reproducible manner: *read*, *factor*, *correct*, and *drop*. These verbs are designed to be implemented in that order, though there may be multiple applications of *correct* for a given data set. All of the core functions for `driftR` have the `dr_` prefix, making it easy to use them interactively in RStudio. 
