--- a/README.Rmd
+++ b/README.Rmd
@@ -24,7 +24,13 @@ There are many sources of water quality monitoring data including instruments (e
 
 ## Installation
 
-`driftR` is not available from CRAN yet. In the meantime, you can install the development version of `driftR` from Github with `devtools`:
+You can install `driftR` from CRAN:
+
+```{r, eval = FALSE}
+install.packages("driftR")
+library(driftR)
+```
+You can also install the development version of `driftR` from Github with `devtools`:
 
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
