tweak installation text on README

--- a/README.Rmd
+++ b/README.Rmd
@@ -24,12 +24,12 @@ There are many sources of water quality monitoring data including instruments (e
 
 ## Installation
 
-You can install `driftR` from CRAN:
+The easiest way to get `driftR` is to install it from CRAN:
 
 ```{r, eval = FALSE}
 install.packages("driftR")
-library(driftR)
 ```
+
 You can also install the development version of `driftR` from Github with `devtools`:
 
 ```{r gh-installation, eval = FALSE}
